--- a/content/04/02d_RegexApplication.ipynb
+++ b/content/04/02d_RegexApplication.ipynb
@@ -263,7 +263,7 @@
     "```{admonition}\n",
     "Two caveats:\n",
     "1. This is a \"dumb\" function in the sense that it doesn't do anything to actually detect if two words are in the same sentence or paragraph. There are ways to do that, but we're going to keep it simple and just stick to this function as-is. Let's assume that a sentence is about 20 words on average, and a paragraph is 200 words on average.\n",
-    "2. In the next two examples: If your document has line breaks, like a newline symbol (\"\\n\") or return symbol (\"\\r\"), which create paragraph breaks in a document, this this function _won't_ search both sides of it. If a document splits paragraphs like this, great: our function will do within-paragraph searching, as long as our cleaning process doesn't delete those symbols. However, some documents have those symbols at the end of every single line and we need to delete them while cleaning, in which case, we can't assume the function only looks within paragraphs.\n",
+    "2. In the next two examples: If your document has line breaks, like a newline symbol (\"\\n\") or return symbol (\"\\r\"), which create paragraph breaks in a document, this this function _won't_ search both sides of it. If a document splits paragraphs like this, great: our function will do within-paragraph searching, **as long as our cleaning process doesn't delete those symbols.** However, some documents have those symbols at the end of every single line and we need to delete them while cleaning, in which case, we can't assume the function only looks within paragraphs.\n",
     "```"
    ]
   },
@@ -385,24 +385,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} **A very useful trick**\n",
+    "## Tips"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} **Is topic1 near topic2 (instead of word1 near word2)?**\n",
     ":class: tip\n",
     "\n",
-    "Above, I said that NEAR_regex builds \"a (complex) regex pattern that will detect if all of the **strings** are near each other in the document.\"  What it is actually doing is putting the strings into a regex. In our examples so far, the strings are always a word.\n",
+    "**The function doesn't just look for words that are near each other. It looks to see if _regex patterns_ are near each other.**\n",
     "\n",
-    "But your list of search terms can include \"mini-regexs\". The most common use: You want to look for a topic (a word) but make sure it is being used in a specific way.\n",
+    "Above, I said that NEAR_regex builds \"a (complex) regex pattern that will detect if all of the **strings** are near each other in the document.\"  What it is actually doing is putting the strings into a regex. In our examples so far, the strings are always a word. But your list of search terms can include \"mini-regexs\". The most common use: You want to look for a topic (a word) but make sure it is being used in a specific way.\n",
     "```\n",
     "\n",
-    "For example, what if we want to know if a text message chain involves a greeting _specifically_ for James but not John? But annoyingly, James is sometimes referred to by a nickname!\n",
+    "Suppose we want to know if a text message chain involves a greeting _specifically_ for James but not John? But annoyingly, James is sometimes referred to by a nickname!\n",
     "\n",
     "Well, we'd want to build a search that looks for:\n",
     "1. A greeting term: \"hey\" OR \"hi\" or \"sup\". \n",
     "2. James' name and nicknames: \"james\" OR \"jimmy\"\n",
     "\n",
-    "So, the \"words\" variable has two elements, each corresponding to the two things above. \n",
+    "So we can exploit how regex works so that when we specify the `words = [element1, element2]` list, that \n",
+    "1. `element1` is the list of greeting terms.\n",
+    "1. `element2` is the list of acceptable names.\n",
+    "\n",
+    "**To build a regex that looks for \"hey\" OR \"hi\" or \"sup\", we need to implement these three things:\n",
     "- In regex, OR is \"|\".\n",
     "- No spaces between terms\n",
-    "- **Important:* Put the parentheses around each set of terms!\n",
+    "- **Important:* Put the parentheses around the whole set of terms!\n",
+    "\n",
+    "So, \"hey\" OR \"hi\" or \"sup\" becomes `'(hey|hi|sup)'`. \n",
     "\n",
     "Constructing a search like this allows you to look for a topic (here, the greeting term) being used in a specific way. Examples:\n",
     "1. The cost (term 1) of building factories (term 2)... but not general costs or costs for other items\n",
@@ -434,8 +447,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{tip}\n",
-    "As the function documentation shows, you can print out the matches to see what's being found:\n",
+    "```{admonition} Printing out your matches\n",
+    ":class: tip\n",
+    "\n",
+    "This is very useful to double-check what your search is finding!\n",
     "```"
    ]
   },
@@ -461,12 +476,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Caveats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "```{admonition} Two caveats\n",
     ":class: warning\n",
     "\n",
-    "Caveat One: When a regex finds a match, the part of that string in the match can't be used again and thus won't be counted. Above, you could argue that mechanically, there are FOUR matches:\n",
+    "**Caveat One:** When a regex finds a match, the part of that string in the match can't be used again and thus won't be counted. Above, you could argue that mechanically, there are FOUR matches:\n",
     "1. hey jimmy\n",
     "2. jimmy hi \n",
     "3. hi james\n",
@@ -474,7 +498,7 @@
     "\n",
     "But the \"hey jimmy\" match \"uses up\" \"jimmy\", so \"jimmy hi\" can't be found. Same with matches \\#3 and \\#4. \n",
     "\n",
-    "Caveat Two: The function is \"greedy\". Look at the next example, where I allow there to be two words between.\n",
+    "**Caveat Two:** The function is \"greedy\". Look at the next example, where I allow there to be two words between.\n",
     "\n",
     "Starting from \"hey\", it finds \"jimmy\" right away, but it doesn't stop. (That would be a \"lazy\" regex.) It keeps looking, since it can look up to three words away. It takes the largest mechanical match possible, so when it finds james, it deems \"hey jimmy hi james\" a match, and because of that, \"hi james\" is already used and can't be a match. So it reports 1 match, not 2. \n",
     "```"
