--- a/content/04/02d_RegexApplication.ipynb
+++ b/content/04/02d_RegexApplication.ipynb
@@ -260,8 +260,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition}\n",
-    "Two caveats:\n",
+    "```{admonition} Two caveats:\n",
+    ":class: note\n",
     "1. This is a \"dumb\" function in the sense that it doesn't do anything to actually detect if two words are in the same sentence or paragraph. There are ways to do that, but we're going to keep it simple and just stick to this function as-is. Let's assume that a sentence is about 20 words on average, and a paragraph is 200 words on average.\n",
     "2. In the next two examples: If your document has line breaks, like a newline symbol (\"\\n\") or return symbol (\"\\r\"), which create paragraph breaks in a document, this this function _won't_ search both sides of it. If a document splits paragraphs like this, great: our function will do within-paragraph searching, **as long as our cleaning process doesn't delete those symbols.** However, some documents have those symbols at the end of every single line and we need to delete them while cleaning, in which case, we can't assume the function only looks within paragraphs.\n",
     "```"
