--- a/content/assignments/mid_proj.ipynb
+++ b/content/assignments/mid_proj.ipynb
@@ -120,7 +120,7 @@
     "        - The total length of the document (# of words)\n",
     "        - The # of unique words (similar to total length)\n",
     "        - The \"tone\" of the document\n",
-    "2. Downloads 2019 accounting data from the data folder in the class repo on S&P500 firms (possibly useful in analysis) and adds them to the dataset \n",
+    "2. Downloads 2019 accounting data (**2019 ccm_cleaned.dta**) from the data folder in the class repo on S&P500 firms (possibly useful in analysis) and adds them to the dataset \n",
     "1. Save the whole thing to `output/sp500_accting_plus_textrisks.csv`\n",
     "\n",
     "```{note}\n",
