--- a/content/assignments/mid_proj.ipynb
+++ b/content/assignments/mid_proj.ipynb
@@ -170,8 +170,8 @@
     "    - Are there any caveats about the sample and/or data? If so, mention them and briefly discuss possible issues they raise with the analysis. \n",
     "1. Explore the correlation between your risk values and stock returns around key dates for the onset of covid. \n",
     "    - Stock returns are in the class's data folder (\"2019-2020-stock_rets cleaned.zip\")\n",
-    "    - Get the firm's returns for the week of Mar 9 - Mar 13, 2020\n",
-    "    - Bonus: repeat the analysis but use Feb 23-Mar 23 as the \"collapse period\"\n",
+    "    - Get the firm's returns for the week of Mar 9 - Mar 13, 2020 (the cumulative return for the week)\n",
+    "    - Bonus: repeat the analysis but use the cumulative returns from Feb 23-Mar 23 as the \"collapse period\"\n",
     "    - Bonus: repeat the analysis but use Mar 24 as the \"stimmy day\" (stimulus was announced) ... how does this change your results, and is it doing so in a predictable way?\n",
     "    - Bonus: repeat the analysis, but use firm accounting variables: Some of these probably indicate that a firm should be more [resilient to the crisis](https://privpapers.ssrn.com/sol3/papers.cfm?abstract_id=3597838)! \n",
     "    - Present your findings visually and follow the lessons on effective visualization!\n",
