--- a/content/05/02a_basics.ipynb
+++ b/content/05/02a_basics.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "and we can substitute $\\hat{y}$ in to that and get:\n",
     "\n",
-    "$$ \\min \\sum(y-\\hat{a} + \\hat{\\beta}x)  $$\n",
+    "$$ \\min \\sum(y-\\hat{a} + \\hat{\\beta}x)^2  $$\n",
     "\n",
     "By solving this problem, you're in essence \"plotting\" a bunch of these lines (with corresponding slopes and intercepts), and each time, you get the error for each datapoint ($\\hat{u}$), and choosing the line that fits the data the best. \n",
     "\n",
