--- a/content/05/02d_interpretingCoefs.ipynb
+++ b/content/05/02d_interpretingCoefs.ipynb
@@ -46,7 +46,7 @@
     "| $\\log y=a+\\beta \\log X$ | If $X \\uparrow $ 1%, then $y \\uparrow$ by $\\beta$%  |\n",
     "\n",
     "```{note}\n",
-    "This table should help you see why log transformations are useful: They model _**proportional**_ relationships. That is, instead of focusing on 1 unit changes (i.e. \"linear\" changes), they model (using percent changes in X and/or Y!\n",
+    "This table should help you see why log transformations are useful: They model _**proportional**_ relationships. That is, instead of focusing on 1 unit changes in X and Y (i.e. \"linear\" changes), they model percent changes in X and/or Y!\n",
     "```\n",
     "\n",
     "## If X is a binary variable\n",
