--- a/content/assignments/project.ipynb
+++ b/content/assignments/project.ipynb
@@ -51,15 +51,20 @@
     "    - outlines (numbered list, broad steps, not minutia) how you acquired the data (for many groups, the downloading is in a separate file), got the data into python, and if you found any issues with the data you cleaned up (again, possibly a different file)\n",
     "    - includes a bullet point list of your main observations from your EDA\n",
     "    - shows your exploratory data analysis (EDA) (tables and figures and whatnot, does not need to be pretty or formatted)\n",
+    "- Graded on: Data you have, EDA shown and discussed\n",
+    "    \n",
     "```\n",
     "\n",
     "```{dropdown} **Repo at submission (20%)**\n",
     "    \n",
     "On the due date (listed in the schedule), your repo should be cleaned and polished for publication. That means it should be cleaned of excess and random files, and that folders are sensible (data, temporary, code), the readme helps me/the TA/future visitors explore your repo easily. Your folder structure is up to you and will respond to the nature of your particular project, but I should be able to easily find\n",
     "\n",
+    "- The readme should contain a link to the website built off this analysis\n",
     "- The code used to scrape and download data (and if you click-and-download anything, a link to the source) can be separate files, and the code used to load, clean, merge, and explore the data. \n",
     "- The code used to do the analysis\n",
     "- Your presentation file - **it needs to be in this repo.** If you use google slides, you should include them as a PDF in this folder / put a link to the slides in the readme.\n",
+    "\n",
+    "Graded on: Folder org, read me, code readiblity/structure\n",
     "\n",
     "Obvious caveats for grading: Form matters, check grammar, and cite work you build on. **Plagarism is not acceptable.** \n",
     "\n",
@@ -67,6 +72,8 @@
     "\n",
     "```{dropdown} **Website (20%)**\n",
     "   \n",
+    "This is a new component this year and I'm excited about it! \n",
+    "\n",
     "We will talk about this more later.    \n",
     "\n",
     "Obvious caveats for grading: Form matters, check grammar, and cite work you build on. **Plagarism is not acceptable.** \n",
