--- a/handouts/Module 4 Notes.ipynb
+++ b/handouts/Module 4 Notes.ipynb
@@ -22,15 +22,17 @@
     "    - [ ] explore the modeling process\n",
     "    - [ ] determine appropriate models to use based on modeling objectives\n",
     "- [ ] Regression\n",
-    "    - [ ] learn basic notation and terminilogy for regression models\n",
-    "    - [ ] measure goodness of fit on a regression\n",
-    "    - [ ] interpret mechanical meanings of coefficients for different variable types\n",
-    "    - [ ] understand statistical significance\n",
+    "    - [ ] learn basic notation and terminology for regression models\n",
     "    - [ ] fit a regression with `statsmodels` and/or `sklearn`\n",
+    "    - [ ] interpret mechanical meanings of coefficients for different variable types\n",
+    "    - [ ] measure goodness of fit on a regression\n",
+    "    - [ ] what does statistical significance tell us and not tell us\n",
     "- [ ] `sklearn` and Machine Learning\n",
-    "    - [ ] understand objectives and development of machine learning models\n",
-    "    - [ ] evaluate models using \"scoring metrics\"\n",
-    "    - [ ] understand mechanics of fitting models and best practices for machine learning models"
+    "    - [ ] understand objectives and development process of machine learning models\n",
+    "    - [ ] you evaluate models using \"scoring metrics\"\n",
+    "    - [ ] develop your intuition about how to select which metric fits a given problem\n",
+    "    - [ ] understand mechanics of fitting models \n",
+    "    - [ ] best practices for training ML models without leakage"
    ]
   },
   {
@@ -108,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
