--- a/handouts/dev/indev Module 3 Notes.ipynb
+++ b/handouts/dev/indev Module 3 Notes.ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "07aac84f-df76-4c90-9a1a-e2b54415a9f4",
+   "metadata": {},
+   "source": [
+    "We didn't use this file because Module 3 was essentially a 2 week \"case study\" where I live coded  \n",
+    "- psuedocode of an analysis (spider, parser, analysis)\n",
+    "- psuedocode of a spider\n",
+    "- through the pieces of the spider\n",
+    "- psuedocode of a parser\n",
+    "- through the pieces of the spider\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0fa2fd4-c1c8-4451-924d-c9469b8ccce5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b673725-a777-4bb2-8e07-5d0e4fc75ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "33d45c19-4270-42ff-829f-bb37771ff08b",
    "metadata": {},
    "source": [
@@ -103,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
